--- a/html and css/Assignment 1/style.css
+++ b/html and css/Assignment 1/style.css
@@ -57,6 +57,7 @@ body {
 }
 .signup-btn:hover {
     background-color: #fff;
+    opacity: 0.5;
 }
 
 .create-account-btn {
@@ -133,7 +134,7 @@ body {
 /* Hero Section */
 .hero-section {
     padding: 80px 0 100px;
-    background-color: #f7f7f7;
+    background-color: #fff;
     margin-bottom: 0;
 }
 
@@ -143,6 +144,8 @@ body {
     align-items: center;
     text-align: center;
     margin-bottom: 0;
+    background-color: #fff;
+
 }
 
 .hero-section h1 {
