--- a/Assignment-3/CSS/style.css
+++ b/Assignment-3/CSS/style.css
@@ -2,16 +2,18 @@
   /* box-sizing: border-box; */
   margin: 0;
   padding: 0;
+
 }
 
 body {
-  font-family: Heebo, sans-serif;
+  font-family: DM Sans, sans-serif;
   line-height: 1.6;
   color: #21243D;
 }
 
 
 .navBar {
+  justify-content: space-evenly;
   text-decoration: none;
   width: 100%;
   color: #fff;
@@ -29,11 +31,19 @@ body {
 
 .navLink a {
     color: #fff;
-    text-decoration: none;
-    
-}.navLink a:hover{
-    color: #c9103b;
+    text-decoration: none; 
+    padding: 10px;  
 }
+
+.navLink a.active{
+  border: 2px solid #fff;
+  border-radius: 40px;
+  color: #fff;
+  transition: all 0.2s ease-in-out;
+  border-radius: 100px;
+
+}
+
 
 
 .navMain {
@@ -48,7 +58,9 @@ body {
 .logo {
   text-decoration: none;
   font-weight: bold;
-  font-size: 24px;
+  font-size: 36px;
+  height: 26px;
+  width: 71px;
   color: #fff;
 }
 .logo:hover{
@@ -59,7 +71,7 @@ body {
 
 .banner{
     background-image: url('/images/Banner.png');
-    margin-top: -80px;
+    margin-top: -100px;
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
@@ -149,12 +161,23 @@ body {
 
 .serviceCard p {
   font-size: 14px;
-  color: #666;
+  /* color: #666; */
+}
+
+.serviceCardImg{
+    border-radius: 50%;
+    padding: 36px;
+    width: 40px;
+    height: 40px;
+    background-color: #6C00FF;
+    margin: 0 auto;
+    margin-bottom: 30px;
+
 }
 
 .serviceIcon {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   margin-bottom: 16px;
 }
 
@@ -224,10 +247,7 @@ body {
 
 .imageFrame {
   box-shadow: 20px 20px #6C00FF ;
-  /* color: #6C00FF; */
-  /* border: 12px solid #6C00FF; */
-  padding: 8px;
-  background-color: white;
+  /* padding: 8px; */
   
 }
 
@@ -240,23 +260,29 @@ body {
 
 
 /* Footer */
-.footer {
-  background-color: #dcdde5;
-  padding: 40px 0;
-  color: #fff;
-  align-items: center;
-  justify-content: center;
+footer {
+margin: 128px 0;
 }
 
-.footerContent {
+
+/*.footerContent {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
+}*/
 
+.footerImg{
+
+  margin: 0 auto;
+  width: 71px;
+  height: 26px;
+  margin-bottom: 30px;
+  
+}
 .footerLinks {
   display: flex;
-  gap: 20px;
+  justify-content: space-evenly;
+  margin-bottom: 30px;
 }
 
 .footerLinks a {
@@ -265,8 +291,13 @@ body {
   font-size: 14px;
 }
 
+.footerContent p {
+  margin: 0 auto;
+  color: #393E46;
+  text-align: center;
+}
 .footerLinks a:hover {
-  color: #c9103b;
+  color: #6C00FF;
 }
 
 
