--- a/Assignment-5/CSS/style.css
+++ b/Assignment-5/CSS/style.css
@@ -1,7 +1,7 @@
  * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
 }
 
 body {
@@ -15,27 +15,23 @@ a {
   color: inherit;
 }
 
-.mainContainer {
-  /* max-width: 1200px; */
-  margin: 125px;
-
-
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
+
+
 
 /* Navbar */
-.navBar {
-  width: 100%;
-
-  background: #fff;
-  border-bottom: #fff;
-}
+/* .navBar {
+ width: 100%;
+} */
 
 
-.navContainer {
-  /* max-width: 1200px; */
-  margin: 0 auto;
+.navHeader {
   padding:20px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -52,7 +48,8 @@ a {
   font-weight: 500;
   font-size: 20px;
   display: flex;
-  gap: 20px;
+ justify-content: end;
+ gap: 20px;
   /* justify-content: space-between; */
 }
 
@@ -60,11 +57,15 @@ a {
   color: #c9103b;
 
 }
+
 .introSection {
-  display: flex;
-  /* flex-wrap: wrap; */
-  align-items: center;
   margin-bottom: 40px;
+}
+
+.introItems {
+  display: flex;
+  justify-content: center;
+  padding: 0 20px;
 }
 
 .introSection h1{
@@ -75,8 +76,6 @@ a {
 .introText {
   flex: 1;
   margin-bottom: 20px;
-  width: 60%;
-
 
 }
 .introText h1{
@@ -85,13 +84,13 @@ a {
 }
 
 .introImage {
-  width:40%;
+ 
   display: flex;
-  justify-content: center;
-  align-items: center;
+
   width: 243px;
   height: 243px;
 }
+
 
 .introImage img {
   border-radius: 50%;
@@ -117,10 +116,7 @@ a {
 /* Recent posts */
 .recentPosts {
   background-color: #EDF7FA;
-  padding: 40px 30px;
-  /* width: 100% !important; */
-  /* position:absolute; */
-  /* all: unset; */
+  padding: 40px 0;
   margin-bottom: 40px;
   /* max-width: 1200px !important; */
 }
@@ -128,11 +124,12 @@ a {
 .sectionHeader {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 20px;
 }
 
 .sectionHeader h2{
-    font-weight: normal;
+    font-weight: 400;
     font-size: 22px;
     color: #21243D;
 }
@@ -157,15 +154,19 @@ a {
   margin-bottom: 20px;
 } 
 
-
-
+.postCard h3{
+  margin-bottom: 17px;
+}
+.postCard .postYear{
+  margin-bottom: 11px;
+}
 /* Featured works */
 .featuredWorks {
   margin-bottom: 40px;
 }
 
-.featuredWorks h2{
-    font-weight: normal;
+.featuredWorks h3{
+    font-weight: 400;
     font-size: 22px;
     color: #21243D;
     margin-bottom: 20px;
@@ -189,7 +190,9 @@ a {
   border-radius: 4px;
 }
 
-.workContent h3 {
+.workContent h4 {
+  font-size: 30px;
+  font-weight: 700;
   margin-bottom: 10px;
 }
 
@@ -215,7 +218,7 @@ footer {
 
 .footerIcons {
   display: flex;
-  gap: 40px; /* This adds space between the icons */
+  gap: 40px;
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
@@ -236,7 +239,10 @@ footer {
 
 
 /* Responsive Design */
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
+  .container {
+  max-width: 767px;
+}
   .navContainer {
     flex-direction: column;
     align-items: center;
@@ -249,10 +255,13 @@ footer {
     font-size: 18px;
   }
 
-  .mainContainer {
-    margin: 20px;
-  }
 
+  .introItems {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
 
   .introSection {
     display: flex;
@@ -268,16 +277,30 @@ footer {
 
   .introText h1 {
     font-size: 32px;
+    font-weight: 700;
   }
+
+
 
   .introImage {
-    width: 200px;
-    height: 200px;
+    width: 174.38px;
+    height: 180px;
   }
 
-  .recentPosts {
-    padding: 20px 10px;
+  
+
+.recentPosts .sectionHeader h2{
+    font-size: 16px;
+    font-weight: 400;
+justify-content: center;  }
+
+
+ h2{
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
   }
+
 
   .postsGrid {
     flex-direction: column;
@@ -287,15 +310,22 @@ footer {
     flex: 1 1 100%;
   }
 
+  .postCard h3 {
+    font-size: 22px;
+    font-weight: 700;
+  }
+
   .workItem {
     flex-direction: column;
     align-items: center;
   }
 
   .workItem img {
+    width: 100%;
     width: 339px;
     height: 230px;
   }
+
 
   .workContent {
     align-content: flex-start;
@@ -309,7 +339,24 @@ footer {
 }
 
 
+
+
 @media (max-width: 991px) {
+
+
+.container{
+  max-width: 991px;
+  margin: 0 auto;
+}
+
+.introItems {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
+
+
   .introSection {
     flex-direction: column-reverse; 
     align-items: center;
@@ -320,4 +367,26 @@ footer {
     text-align: center;
     margin-top: 20px;
   }
+
+  .sectionHeader{
+    justify-content: center;
+  }
+
+.recentPosts .sectionHeader h2{
+    font-size: 16px;
+    font-weight: 400;
 }
+
+
+.featuredWorks h3 {
+    text-align: center;
+  }
+
+
+.sectionHeader a{
+     display: none;
+  }
+
+
+
+} 
