--- a/Assignment-6/CSS/style.css
+++ b/Assignment-6/CSS/style.css
@@ -13,6 +13,7 @@ body {
 
 
 a {
+ font-family: "Work Sans", sans-serif;
   text-decoration: none;
   color: #000;
 }
@@ -24,6 +25,7 @@ a {
   height: 100%;
   object-fit: cover;
 } */
+
 
 h1 {
   font-weight: 700;
@@ -69,7 +71,7 @@ p {
 
 
 .container {
-  max-width: 1212px;
+  max-width: 1180px;
   margin: 0 auto;
   padding: 0 32px;
 }
@@ -169,7 +171,7 @@ header{
 
 .banner p {
   color: #fff;
-  font-family: "Work Sans", sans-serif;
+  /* font-family: "Work Sans", sans-serif; */
   font-size: 15px;
   font-weight: 400;
   margin-bottom: 26px;
@@ -209,7 +211,7 @@ header{
 
 
 .partners a{
-   font-family: "Work Sans", sans-serif;
+   /* font-family: "Work Sans", sans-serif; */
     color: #fff;
     background-color: #000;
     border: 2px solid #000;
@@ -256,16 +258,17 @@ header{
 .reverse {
     flex-direction: row-reverse;
     margin-bottom: 60px;
+    gap: 110px;
 }
 
 
 .pThree a {
-  font-family: "Work Sans", sans-serif;
+  /* font-family: "Work Sans", sans-serif; */
     color: #fff;
     background-color: #000;
     border: 2px solid #000;
     border-radius: 5px;
-    padding: 10px 20px;
+    padding: 10px 50px;
     margin-bottom: 60px;
 
 }
@@ -320,19 +323,29 @@ header{
   color: #21252980;;
 }
 
-/*  */
 
 
 .teamMember {
     display: flex;
+    justify-content: space-between;
+    gap: 50px;
     margin-bottom: 45px;
 }
 
 .memberDetail img {
-    display: flex;
-    gap : 30px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
+.memImg {
+  width: 175px;
+  height: 175px;
+  border: 2px solid black;
+  border-radius: 100px;
+  overflow: hidden;
+
+}
 .viewBtn a {
    font-family: "Work Sans", sans-serif;
     color: #fff;
@@ -347,7 +360,6 @@ header{
 
 .footer {
     background-color: #74C69D;
-    /* margin-bottom: 60px; */
     padding: 50px 0;
 }
 
