--- a/Assignment-6/CSS/style.css
+++ b/Assignment-6/CSS/style.css
@@ -16,6 +16,7 @@ a {
  font-family: "Work Sans", sans-serif;
   text-decoration: none;
   color: #000;
+  display: inline-block;
 }
 
 
@@ -49,6 +50,11 @@ h3 {
   margin-bottom: 15px;
 }
 
+h4 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #000;
+}
 
 h5{
     font-size: 16px;
@@ -211,7 +217,6 @@ header{
 
 
 .partners a{
-   /* font-family: "Work Sans", sans-serif; */
     color: #fff;
     background-color: #000;
     border: 2px solid #000;
@@ -303,7 +308,7 @@ header{
 
 
 .teamMember .memberDetail {
-  padding: 20px 40px;
+  padding: 10px 30px;
   box-shadow: 3px 4px 12px 1px #00000040;
 }
 
@@ -320,7 +325,7 @@ header{
 
 
 .memberDetail .memName {
-  color: #21252980;;
+  color: #212529BF;
 }
 
 
@@ -346,6 +351,8 @@ header{
   overflow: hidden;
 
 }
+
+
 .viewBtn a {
    font-family: "Work Sans", sans-serif;
     color: #fff;
@@ -353,6 +360,7 @@ header{
     border: 2px solid #000;
     border-radius: 5px;
     padding: 10px 50px;
+    display: inline-block;
 }
 
 
